dos/M1LocalControl_wBM0Controller/M1LocalControl_wBM0.h

/* External inputs (root inport signals with default storage) */
typedef struct {
  real_T Feedback[231];                /* '<Root>/Feedback' */
} ExtU_M1LocalControl_wBM0_T;
/* External outputs (root outports fed by signals with default storage) */
typedef struct {
  real_T Output[2316];                 /* '<Root>/Output' */
} ExtY_M1LocalControl_wBM0_T;
/* External inputs (root inport signals with default storage) */
extern ExtU_M1LocalControl_wBM0_T M1LocalControl_wBM0_U;
/* External outputs (root outports fed by signals with default storage) */
extern ExtY_M1LocalControl_wBM0_T M1LocalControl_wBM0_Y;
/* Model entry point functions */
extern void M1LocalControl_wBM0_initialize(void);
extern void M1LocalControl_wBM0_step(void);
extern void M1LocalControl_wBM0_terminate(void);